Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1119

Guththila fails handling more than 4 namespaces

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.4.1
    • guththila
    • None
    • Linux + windows

    Description

      Guththila fails handling more than 4 namespaces in an element. The number 4 is declared here,

      guththila_xml_writer.h:#define GUTHTHILA_XML_WRITER_NAMESP_DEF_SIZE 4

      Guththila should be fixed to adjust the allocated buffer for the namespaces dynamically.

      Attachments

        Activity

          People

            Unassigned Unassigned
            dimuthu Dimuthu Gamage
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: