Fixing https://issues.apache.org/jira/browse/AXIS2C-1119, for more than 4 namespace declarations